# yomu-backend-rust

./: .clippy.toml  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  repomix.config.json  rustfmt.toml
.cargo/: audit.toml  deny.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml  security-audit.yml  sonar.yml
.sqlx/: query-0b58f1fa466bf4b0b63f36a11b8b18962c392fe46bb602494fca7228e3f6d691.json  query-0c0d217e807640319b503a0c910c5124083f2db7aea9dbf0258b0f5284738f32.json  query-136eb55678758a7eabc5c446a4262e7df73a1cb9e15782fcee585f34781e9e12.json  query-23c392a0849476a98493af283ad8078070153bf2ae715e13389d541ea5449e66.json  query-47dfe7e01d16c3e5afc49c703ba6cd9157f5ecf694348d1a78ba34a53ae27f86.json  query-6932bfae9e1222d26da1c82ffaa33f6fed56862d70ef31d16e14bafd2d966179.json  query-8f11fc8a6ad34e8222e78dc240d06fd3733afecf7f7245fd151230ed4fd422ab.json  query-8f41e067c0dd36d07c40dceb6ee014306ea1ad7b5b522ff0635032f89938fa4d.json  query-c8271d4592bef918948b3cc82b19b06400ca60dd679d9153f4b6c06085e5a737.json  query-e2eac3e75df83f3cf9773322c2f2c2f842600da75526ab3f1bea6ea944e7bba3.json
migrations/: 20260224122751_first_migrations.sql  20260416022505_add_reward_points.sql  20260416134013_add_mission_type.sql  20260417000000_add_shadow_users_table.sql
src/: lib.rs  main.rs
src/config/: database.rs  mod.rs
src/modules/: mod.rs
src/modules/gamification/: mod.rs
src/modules/gamification/application/: mod.rs
src/modules/gamification/application/dto/: mod.rs  quiz_sync.rs
src/modules/gamification/application/use_cases/: claim_mission_reward.rs  mod.rs  sync_quiz_gamification.rs
src/modules/gamification/domain/: mod.rs
src/modules/gamification/domain/entities/: achievement.rs  daily_mission.rs  mod.rs  user_achievement.rs  user_mission.rs
src/modules/gamification/domain/errors/: mod.rs
src/modules/gamification/domain/repositories/: achievement_repository.rs  mission_repository.rs  mod.rs
src/modules/gamification/infrastructure/: mod.rs
src/modules/gamification/infrastructure/database/: mod.rs
src/modules/gamification/infrastructure/database/postgres/: achievement_repository.rs  mission_repository.rs  mod.rs
src/modules/gamification/infrastructure/database/redis/: mod.rs
src/modules/gamification/infrastructure/http/: mod.rs
src/modules/gamification/presentation/: mod.rs  routes.rs
src/modules/gamification/presentation/controllers/: claim_mission_controller.rs  mod.rs  sync_quiz_controller.rs
src/modules/league/: mod.rs
src/modules/league/application/: mod.rs
src/modules/league/application/dto/: clan_detail_dto.rs  clan_response_dto.rs  create_clan_dto.rs  join_clan_dto.rs  leaderboard_dto.rs  leaderboard_query_dto.rs  mod.rs  update_score_dto.rs  user_tier_dto.rs
src/modules/league/application/use_cases/: mod.rs
src/modules/league/application/use_cases/clan/: create_clan_usecase.rs  get_clan_detail_usecase.rs  join_clan_usecase.rs  (+1 more)
src/modules/league/domain/: mod.rs
src/modules/league/domain/entities/: clan.rs  clan_member.rs  mod.rs  score.rs
src/modules/league/domain/errors/: league_error.rs  mod.rs
src/modules/league/domain/repositories/: clan_repository.rs  leaderboard_cache.rs  mod.rs
src/modules/league/infrastructure/: mod.rs
src/modules/league/infrastructure/database/: mod.rs
src/modules/league/infrastructure/http/: java_core_client.rs  mod.rs
src/modules/league/presentation/: mod.rs  routes.rs
src/modules/league/presentation/controllers/: clan_controller.rs  mod.rs  score_controller.rs
src/modules/user_sync/: mod.rs
src/modules/user_sync/application/: mod.rs
src/modules/user_sync/application/dto/: mod.rs  quiz_history_dto.rs  sync_user_dto.rs  sync_user_response_dto.rs
src/modules/user_sync/application/use_cases/: mod.rs  sync_new_user_usecase.rs  sync_quiz_history_usecase.rs
src/modules/user_sync/domain/: mod.rs
src/modules/user_sync/domain/entities/: mod.rs  quiz_history.rs  shadow_user.rs
src/modules/user_sync/domain/errors/: mod.rs  user_sync_error.rs
src/modules/user_sync/domain/repositories/: mod.rs  quiz_history_repository.rs  user_repository.rs
src/modules/user_sync/infrastructure/: mod.rs
src/modules/user_sync/infrastructure/database/: mod.rs
src/modules/user_sync/presentation/: mod.rs  routes.rs
src/modules/user_sync/presentation/controllers/: internal_user_controller.rs  mod.rs  quiz_history_controller.rs
src/shared/: mod.rs
src/shared/domain/: base_error.rs  mod.rs
src/shared/infrastructure/: logging.rs  mod.rs  telemetry.rs
src/shared/infrastructure/http/: client.rs
src/shared/infrastructure/metrics/: metrics.rs  mod.rs  routes.rs
src/shared/utils/: mod.rs  response.rs
tests/modules/gamification/: domain_test.rs  infrastructure_test.rs  usecase_test.rs
tests/modules/league/: domain_test.rs  infrastructure_test.rs  presentation_test.rs  usecase_test.rs
tests/modules/user_sync/: domain_test.rs  infrastructure_test.rs  presentation_test.rs  usecase_test.rs
(+17 files in other folders)
