[package]
name = "yomu-backend-rust"
version = "0.1.0"
edition = "2024"
description = "Yomu Backend Rust"

[dependencies]

axum = "0.8.8"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace", "timeout"] }


tokio = { version = "1.49.0", features = ["full"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.138"

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

redis = { version = "1.0.4", features = ["tokio-comp"] }


uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"

thiserror = "2.0.18"
anyhow = "1.0.95"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

validator = { version = "0.20.0", features = ["derive"] }

reqwest = { version = "0.13.2", features = ["json"] }
async-trait = "0.1"

[lints.rust]
unsafe_code = "forbid"
dead_code = "warn"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
todo = "allow"
unimplemented = "allow"

[dev-dependencies]
mockall = "0.14.0"
async-trait = "0.1"

[[test]]
name = "usecase_test"
path = "tests/modules/league/usecase_test.rs"

[[test]]
name = "infrastructure_test"
path = "tests/modules/league/infrastructure_test.rs"

[[test]]
name = "presentation_test"
path = "tests/modules/league/presentation_test.rs"
